fix alt & fix color contrast

--- a/src/composents/project/project.scss
+++ b/src/composents/project/project.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: chocolate;
+  background-color: rgb(85, 45, 16);
   border-radius: 20px;
   padding: 10px;
   gap: 10px;
