--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,2 +1,3 @@
 $color-background: rgb(44, 44, 44);
 $color-header-footer: rgb(88, 88, 88);
+$color-tag: rgb(0, 9, 134);
